@@ -1,3 +1,8 @@
+2013-12-14   Jan Hubicka  <jh@suse.cz>
+
+	PR middle-end/58477
+	* cgraphclones.c (cgraph_clone_edge): Do not resolve speculative edges.
+
 2013-12-14   H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR target/59492
